--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,6 @@
 Package: shoesize
 Type: Package
 Title: Simple and lightweight shoe size converter
-Version: 0.1.1
+Version: 0.1.2
+RoxygenNote: 7.1.1
+Encoding: UTF-8
